Fix jump in form container width

--- a/public/indivisible/style/body.css
+++ b/public/indivisible/style/body.css
@@ -9,7 +9,7 @@ div#form-container {
 
 @media screen and (max-width: 492px) {
   div#form-container {
-    width: 320px;
+    width: 369px;
   }
 }
 
